# gemini-miniwob-agent

./: .env-example  .gitignore  README.md  agent.py  debug_driver.py  debug_path.py  environment.py  main.py  pyproject.toml  serve_miniwob.py
data/: sample_trace.jsonl
